--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@ Dispute Resolution: Business & Advanced Family Law.</p></div>
 
 <center><h1 class="label3"> <i class="fa fa-star" aria-hidden="true"></i> Previous Professional Experience:</h1></center>
 <p>
-<ul><li>General Counsel & Secreatary, The Howell Corporation, Houston, Texas, 1979 - 1984;</li>
-<li>Vice President, General Counsel, and Secreatary. Gimbel Brothers, Inc., New York, New York, 1976 - 1979.</li>
+<ul><li>General Counsel & Secretary, The Howell Corporation, Houston, Texas, 1979 - 1984;</li>
+<li>Vice President, General Counsel, and Secretary. Gimbel Brothers, Inc., New York, New York, 1976 - 1979.</li>
 <li>Assistant General Counsel, Montgomery Ward & Co., Inc., Chicago, Illinois, 1973 - 1975;</li>
 <li>Senior Counsel, National Broadcasting Company, Inc., New York, New York, 1969 - 1973;</li>
-<li>Private Practice, New York, New York, 1965 -1969; limited to federal legislation, antitrust and trade regulation;</li>
+<li>Private Practice, New York, New York, limited to federal legislation, antitrust and trade regulation 1965 -1969;</li>
 <li>Federal Trade Commission, Washington, D.C., 1960 - 1965</li></ul>
 </p>
 
@@ -77,8 +77,8 @@ Dispute Resolution: Business & Advanced Family Law.</p></div>
 
 <center><h1 class="label3"> <i class="fa fa-file" aria-hidden="true"></i> Some Cases of Note:</h1></center>
 <p>
-<ul><li>Alberta Energy Partner v. Blast Energy Services, Inc., 593 F.3d 418 (5th Cir. 2010); In re Reichmann Petroleum Corporation, Inc., et al., 2009 WL 915260 (S.D. Tex. 2009), and 2010 WL 1563689 (5th Cir. 2010);</li>
-<li>Enea Embbeded Technology, Inc.; Anea AB, v. Eneas Corporation, et al., 2009 WL 648891 (D. Ariz 2009);</li>
+<ul><li>Alberta Energy Partners v. Blast Energy Services, Inc., 593 F.3d 418 (5th Cir. 2010); In re Reichmann Petroleum Corporation, Inc., et al., 2009 WL 915260 (S.D. Tex. 2009), and 2010 WL 1563689 (5th Cir. 2010);</li>
+<li>Enea Embbeded Technology, Inc.; Anea AB v. Eneas Corporation, et al., 2009 WL 648891 (D. Ariz 2009);</li>
 <li>Tex Tin Corporation, et al. v. United States of America, et al.; In re Tex Tin Settling Defendants v. Oxyde Chemicals, Inc., 2009 WL 1118587 (S.D. Tex 2006);</li>
 <li>Robert Gilchrist v. Bandera Electic Cooperative, Inc., 532 U.S. 972, 121 S.Ct. 1603 (2001), petition for writ of certiorari (denied);</li>
 <li>Thomas E. Finch v. Dee Howard Co., Aerointernational, Inc., Allenia and Finmeccanica, 232 F.3d 210 (5th Cir. 2000);</li>
@@ -90,8 +90,8 @@ Dispute Resolution: Business & Advanced Family Law.</p></div>
 <center><h1 class="label3"> <i class="fa fa-gavel" aria-hidden="true"></i> Some Other Legal Activities:</h1></center>
 <p><ul><li>Organized Howell Petroleum Corporation (New York Stock Exchange Company until acquired by Howell Corporation) from remains of 59 oil gas limited partnerships in 1982;</li>
 <li>Counsel for Marcor Corporation in acquisition by Mobil Oil Corporation in 1976;</li>
-<li>Attorney for NBC West Coast in matters relating to talent, studio production, and RCA Records, 1972 - 1973;</li>
-<li>FTC Attorney in Chanrge of enquiry into trade practices of the Gypsum Industry in 1965, resulting in indictments for price fixing by the Department of Justice.</li></ul></p>
+<li>Attorney for NBC West Coast in matters relating to talent, studio production, and RCA Records, <!--1972 - 1973--> 1970 - 1973;</li>
+<li>FTC Attorney in Charge of enquiry into trade practices of the Gypsum Industry in 1965, resulting in indictments for price fixing by the Department of Justice.</li></ul></p>
 
 <hr />
 
