--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="ct.css">
-  <link rel="stylesheet" href="slider.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -65,11 +64,11 @@ Dispute Resolution: Business & Advanced Family Law.</p></div>
 
 <center><h1 class="label3"> <i class="fa fa-star" aria-hidden="true"></i> Previous Professional Experience:</h1></center>
 <p>
-<ul><li>General Counsel & Secreatary, The Howell Corporation, Houston, Texas, 1979 - 1984;</li>
-<li>Vice President, General Counsel, and Secreatary. Gimbel Brothers, Inc., New York, New York, 1976 - 1979.</li>
+<ul><li>General Counsel & Secretary, The Howell Corporation, Houston, Texas, 1979 - 1984;</li>
+<li>Vice President, General Counsel, and Secretary. Gimbel Brothers, Inc., New York, New York, 1976 - 1979.</li>
 <li>Assistant General Counsel, Montgomery Ward & Co., Inc., Chicago, Illinois, 1973 - 1975;</li>
 <li>Senior Counsel, National Broadcasting Company, Inc., New York, New York, 1969 - 1973;</li>
-<li>Private Practice, New York, New York, 1965 -1969; limited to federal legislation, antitrust and trade regulation;</li>
+<li>Private Practice, New York, New York, limited to federal legislation, antitrust and trade regulation 1965 -1969;</li>
 <li>Federal Trade Commission, Washington, D.C., 1960 - 1965</li></ul>
 </p>
 
@@ -77,8 +76,8 @@ Dispute Resolution: Business & Advanced Family Law.</p></div>
 
 <center><h1 class="label3"> <i class="fa fa-file" aria-hidden="true"></i> Some Cases of Note:</h1></center>
 <p>
-<ul><li>Alberta Energy Partner v. Blast Energy Services, Inc., 593 F.3d 418 (5th Cir. 2010); In re Reichmann Petroleum Corporation, Inc., et al., 2009 WL 915260 (S.D. Tex. 2009), and 2010 WL 1563689 (5th Cir. 2010);</li>
-<li>Enea Embbeded Technology, Inc.; Anea AB, v. Eneas Corporation, et al., 2009 WL 648891 (D. Ariz 2009);</li>
+<ul><li>Alberta Energy Partners v. Blast Energy Services, Inc., 593 F.3d 418 (5th Cir. 2010); In re Reichmann Petroleum Corporation, Inc., et al., 2009 WL 915260 (S.D. Tex. 2009), and 2010 WL 1563689 (5th Cir. 2010);</li>
+<li>Enea Embbeded Technology, Inc.; Anea AB v. Eneas Corporation, et al., 2009 WL 648891 (D. Ariz 2009);</li>
 <li>Tex Tin Corporation, et al. v. United States of America, et al.; In re Tex Tin Settling Defendants v. Oxyde Chemicals, Inc., 2009 WL 1118587 (S.D. Tex 2006);</li>
 <li>Robert Gilchrist v. Bandera Electic Cooperative, Inc., 532 U.S. 972, 121 S.Ct. 1603 (2001), petition for writ of certiorari (denied);</li>
 <li>Thomas E. Finch v. Dee Howard Co., Aerointernational, Inc., Allenia and Finmeccanica, 232 F.3d 210 (5th Cir. 2000);</li>
@@ -90,8 +89,8 @@ Dispute Resolution: Business & Advanced Family Law.</p></div>
 <center><h1 class="label3"> <i class="fa fa-gavel" aria-hidden="true"></i> Some Other Legal Activities:</h1></center>
 <p><ul><li>Organized Howell Petroleum Corporation (New York Stock Exchange Company until acquired by Howell Corporation) from remains of 59 oil gas limited partnerships in 1982;</li>
 <li>Counsel for Marcor Corporation in acquisition by Mobil Oil Corporation in 1976;</li>
-<li>Attorney for NBC West Coast in matters relating to talent, studio production, and RCA Records, 1972 - 1973;</li>
-<li>FTC Attorney in Chanrge of enquiry into trade practices of the Gypsum Industry in 1965, resulting in indictments for price fixing by the Department of Justice.</li></ul></p>
+<li>Attorney for NBC West Coast in matters relating to talent, studio production, and RCA Records, <!--1972 - 1973--> 1970 - 1973;</li>
+<li>FTC Attorney in Charge of enquiry into trade practices of the Gypsum Industry in 1965, resulting in indictments for price fixing by the Department of Justice.</li></ul></p>
 
 <hr />
 
@@ -103,41 +102,28 @@ Dispute Resolution: Business & Advanced Family Law.</p></div>
 
 <!--Testimonials-->
 <center><h1 class="label3"> <i class="fa fa-user" aria-hidden="true"></i> Testimonials:</h1></center>
-<div class="slideshow-container">
-  <div class="mySlides fade">
-    <!--<div class="numbertext">1 / 4</div>-->
-    <img src="" style="width:100%">
-    <div class="text"><div class="words">"Not just a lawyer, but a business man with a law degree".</div> <div class="client">-By Opposing Counsel in Bank Fraud Case</div></div>
-  </div>
-
-  <div class="mySlides fade">
-    <!--<div class="numbertext">2 / 4</div>-->
-    <img src="" style="width:100%">
-    <div class="text"><div class="words">"Best damn trial attorney I've met".</div> <div class="client">- By Client in Oil & Gas Case</div></div>
-  </div>
-
-  <div class="mySlides fade">
-    <!--<div class="numbertext">3 / 4</div>-->
-    <img src="" style="width:100%">
-    <div class="text"><div class="words">"Smartest lawyer I've every known".</div> <div class="client">By Former Exxon Regarding Corporate Analysis</div></div>
-  </div>
-
-  <div class="mySlides fade">
-    <!--<div class="numbertext">4 / 4</div>-->
-    <img src="" style="width:100%">
-    <div class="text"><div class="words">"One of my heroes when I started practing law in Harris County".</div> <div class="client">-By Presiding Judge, in Construction Dispute Case</div></div>
-  </div>
-
-  <a class="prev" onclick="plusSlides(-1)"><!--&#10094;--><i class="fa fa-chevron-left fa-2x" style="color:rgba(51,51,51,1);" aria-hidden="true"></i></a>
-  <a class="next" onclick="plusSlides(1)"><!--&#10095;--><i class="fa fa-chevron-right fa-2x" style="color:rgba(51,51,51,1);" aria-hidden="true"></i></a>
+<div class="row">
+<div class="colb colgap">
+<div class="words">"Not just a lawyer, but a business man with a law degree".</div> 
+<div class="client">- By Opposing Counsel in Bank Fraud Case</div>
 </div>
-<br>
 
-<div style="text-align:center">
-  <span class="dot" onclick="currentSlide(1)"></span> 
-  <span class="dot" onclick="currentSlide(2)"></span> 
-  <span class="dot" onclick="currentSlide(3)"></span> 
-  <span class="dot" onclick="currentSlide(4)"></span> 
+<div class="colb colgap">
+<div class="words">"Best damn trial attorney I've met".</div> 
+<div class="client">- By Client in Oil & Gas Case</div>
+</div>
+</div><div class="row">
+<div class="colb colgap">
+<div class="words">"Smartest lawyer I've every known".</div> 
+<div class="client">- By Former Exxon Regarding President Corporate Analysis</div>
+</div>
+
+<div class="colb colgap">
+<div class="words">"One of my heroes when I started practing law in Harris County".</div> 
+<div class="client">- By Presiding Judge, in Construction Dispute Case</div>
+</div>
+
+
 </div>
 <!--Testiminials-->
 
@@ -167,35 +153,6 @@ Dispute Resolution: Business & Advanced Family Law.</p></div>
 
 <!--Footer-->
 
-
-<script>
-var slideIndex = 1;
-showSlides(slideIndex);
-
-function plusSlides(n) {
-  showSlides(slideIndex += n);
-}
-
-function currentSlide(n) {
-  showSlides(slideIndex = n);
-}
-
-function showSlides(n) {
-  var i;
-  var slides = document.getElementsByClassName("mySlides");
-  var dots = document.getElementsByClassName("dot");
-  if (n > slides.length) {slideIndex = 1} 
-  if (n < 1) {slideIndex = slides.length}
-  for (i = 0; i < slides.length; i++) {
-      slides[i].style.display = "none"; 
-  }
-  for (i = 0; i < dots.length; i++) {
-      dots[i].className = dots[i].className.replace(" active", "");
-  }
-  slides[slideIndex-1].style.display = "block"; 
-  dots[slideIndex-1].className += " active";
-}
-</script>
 
 </body>
 </html>
