--- a/index.html
+++ b/index.html
@@ -2,14 +2,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">	
   <link rel="stylesheet" href="ct.css">
+  <link rel="stylesheet" href="slider.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="icon" type="image/png" href="images/gavel.png">
 
-  <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>-->
 <title>John B. Benton</title>
 </head>
 
@@ -18,10 +15,10 @@
 
 <div class="row">
 <div class="nav">
-<center><a href="" class="nc">John B. Benton</a> | <a href="#Biograpghy" class="nc">Biography</a> | <a href="#Cases" class="nc">Cases</a> | <a href="#Contact" class="nc">Contact</a></center> 
+<a href="" class="nc">John B. Benton</a> | <a href="#Biograpghy" class="nc">Biography</a> | <a href="#Cases" class="nc">Cases</a> | <a href="#Contact" class="nc">Contact</a>
 </div>
 <div class="mnav">
-<center><a href="" class="nc">John B. Benton</a> | <a href="#Biograpghy" class="nc">Biography</a> | <a href="#Cases" class="nc">Cases</a> | <a href="#Contact" class="nc">Contact</a></center> 
+<a href="" class="nc">John B. Benton</a> | <a href="#Biograpghy" class="nc">Biography</a> | <a href="#Cases" class="nc">Cases</a> | <a href="#Contact" class="nc">Contact</a>
 </div>
 </div>
 
@@ -103,7 +100,8 @@ Dispute Resolution: Business & Advanced Family Law.</p></div>
 
 <!--Testimonials-->
 <center><h1 class="label3"> <i class="fa fa-user" aria-hidden="true"></i> Testimonials:</h1></center>
-<div class="row">
+
+<div class="row pcontent2">
 <div class="colb colgap">
 <div class="words">"Not just a lawyer, but a business man with a law degree".</div> 
 <div class="client">- By Opposing Counsel in Bank Fraud Case</div>
@@ -113,7 +111,7 @@ Dispute Resolution: Business & Advanced Family Law.</p></div>
 <div class="words">"Best damn trial attorney I've met".</div> 
 <div class="client">- By Client in Oil & Gas Case</div>
 </div>
-</div><div class="row">
+</div><div class="row pcontent2">
 <div class="colb colgap">
 <div class="words">"Smartest lawyer I've every known".</div> 
 <div class="client">- By Former Exxon Regarding President Corporate Analysis</div>
@@ -126,6 +124,7 @@ Dispute Resolution: Business & Advanced Family Law.</p></div>
 
 
 </div>
+<!--Testiminials-->
 <!--Testiminials-->
 
 <a name="Contact"><hr /></a>
